# arxiv2md

./: .gitignore  README.md  example.md  main.py  pyproject.toml
src/: _convert.py  main.py
src/arxiv2md/: __init__.py  _api.py  _convert.py  _get_source.py  _utils.py  cli.py  main.py
