[project]
name = "arxiv2md"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "halo>=0.0.31",
    "lxml>=6.0.0",
    "requests>=2.32.4",
    "typer>=0.16.0",
]

[project.scripts]
arxiv2md = "arxiv2md.cli:app"

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
