[project]
name = "arxiv2md"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "komiya", email = "90894519+misya11p@users.noreply.github.com" }]
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.2.0",
    "bs4>=0.0.2",
    "halo>=0.0.31",
    "lxml>=6.0.0",
    "python-frontmatter>=1.1.0",
    "requests>=2.32.5",
    "typer>=0.16.1",
]

[project.scripts]
arxiv2md = "arxiv2md.cli:app"

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"
